start of indexing for mechanical pencils

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -163,153 +163,169 @@ solr.numrows=10
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 
-# <field "indexed"="true" "stored"="false" "name"="_root_" "docValues"="false" "type"="string" />
-panl.facet.r=_root_
-panl.name.r=Root
-panl.type.r=solr.StrField
-
 # <field "indexed"="true" "stored"="true" "name"="id" "type"="string" "multiValued"="false" "required"="true" />
-panl.facet.i=id
-panl.name.i=Id
-panl.type.i=solr.StrField
+#panl.facet.i=id
+#panl.name.i=Id
+#panl.type.i=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="pre" "type"="preanalyzed" />
-panl.facet.P=pre
-panl.name.P=Pre
-panl.type.P=solr.PreAnalyzedField
+# <field "indexed"="true" "stored"="true" "name"="brand" "type"="string" "multiValued"="false" />
+panl.facet.b=brand
+panl.name.b=Brand
+panl.type.b=solr.StrField
 
-# <field "omitNorms"="true" "indexed"="true" "stored"="true" "name"="sku" "type"="text_en_splitting_tight" />
-panl.facet.S=sku
-panl.name.S=Sku
-panl.type.S=solr.TextField
-
-# <field "indexed"="true" "stored"="true" "name"="name" "type"="text_general" />
+# <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
 panl.facet.N=name
 panl.name.N=Name
-panl.type.N=solr.TextField
+panl.type.N=solr.StrField
 
-# <field "omitNorms"="true" "indexed"="true" "stored"="true" "useDocValuesAsStored"="true" "name"="manu" "docValues"="true" "type"="text_gen_sort" "multiValued"="false" />
-panl.facet.m=manu
-panl.name.m=Manu
-panl.type.m=solr.SortableTextField
+# <field "indexed"="true" "stored"="true" "name"="mechanism_type" "type"="string" "multiValued"="false" />
+panl.facet.m=mechanism_type
+panl.name.m=Mechanism Type
+panl.type.m=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="cat" "type"="string" "multiValued"="true" />
-panl.facet.c=cat
-panl.name.c=Cat
+# <field "indexed"="true" "stored"="true" "name"="body_shape" "type"="string" "multiValued"="false" />
+panl.facet.B=body_shape
+panl.name.B=Body Shape
+panl.type.B=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="grip_type" "type"="string" "multiValued"="false" />
+panl.facet.g=grip_type
+panl.name.g=Grip Type
+panl.type.g=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="grip_shape" "type"="string" "multiValued"="false" />
+panl.facet.G=grip_shape
+panl.name.G=Grip Shape
+panl.type.G=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="cap_shape" "type"="string" "multiValued"="false" />
+panl.facet.c=cap_shape
+panl.name.c=Cap Shape
 panl.type.c=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="features" "type"="text_general" "multiValued"="true" />
-panl.facet.f=features
-panl.name.f=Features
-panl.type.f=solr.TextField
+# <field "indexed"="true" "stored"="true" "name"="category" "type"="string" "multiValued"="false" />
+panl.facet.C=category
+panl.name.C=Category
+panl.type.C=solr.StrField
 
-# <field "indexed"="true" "termOffsets"="true" "stored"="true" "name"="includes" "termPositions"="true" "termVectors"="true" "type"="text_general" />
-panl.facet.I=includes
-panl.name.I=Includes
-panl.type.I=solr.TextField
+# <field "indexed"="true" "stored"="true" "name"="length" "type"="pint" "multiValued"="false" />
+panl.facet.l=length
+panl.name.l=Length
+panl.type.l=solr.IntPointField
 
-# <field "indexed"="true" "stored"="true" "name"="weight" "type"="pfloat" />
+# <field "indexed"="true" "stored"="true" "name"="relative_length" "type"="pint" "multiValued"="false" />
+#panl.facet.r=relative_length
+#panl.name.r=Relative Length
+#panl.type.r=solr.IntPointField
+
+# <field "indexed"="true" "stored"="true" "name"="diameter" "type"="pint" "multiValued"="false" />
+panl.facet.d=diameter
+panl.name.d=Diameter
+panl.type.d=solr.IntPointField
+
+# <field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" "multiValued"="false" />
 panl.facet.w=weight
 panl.name.w=Weight
-panl.type.w=solr.FloatPointField
+panl.type.w=solr.IntPointField
 
-# <field "indexed"="true" "stored"="true" "name"="title" "type"="text_gen_sort" "multiValued"="true" />
-panl.facet.t=title
-panl.name.t=Title
-panl.type.t=solr.SortableTextField
+# <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
+panl.facet.R=relative_weight
+panl.name.R=Relative Weight
+panl.type.R=solr.IntPointField
 
-# <field "indexed"="true" "stored"="true" "name"="description" "type"="text_general" />
-panl.facet.d=description
-panl.name.d=Description
-panl.type.d=solr.TextField
+# <field "indexed"="true" "stored"="true" "name"="lead_length" "type"="pint" "multiValued"="false" />
+panl.facet.L=lead_length
+panl.name.L=Lead Length
+panl.type.L=solr.IntPointField
 
-# <field "indexed"="true" "stored"="true" "name"="comments" "type"="text_general" />
-panl.facet.C=comments
-panl.name.C=Comments
-panl.type.C=solr.TextField
-
-# <field "indexed"="true" "stored"="true" "name"="author" "type"="text_gen_sort" "multiValued"="false" />
-panl.facet.a=author
-panl.name.a=Author
-panl.type.a=solr.SortableTextField
-
-# <field "indexed"="true" "stored"="true" "name"="keywords" "type"="text_general" />
-panl.facet.k=keywords
-panl.name.k=Keywords
-panl.type.k=solr.TextField
-
-# <field "indexed"="true" "stored"="true" "name"="resourcename" "type"="text_general" />
-panl.facet.R=resourcename
-panl.name.R=Resourcename
-panl.type.R=solr.TextField
-
-# <field "indexed"="true" "stored"="true" "name"="url" "type"="text_general" />
-panl.facet.u=url
-panl.name.u=Url
-panl.type.u=solr.TextField
-
-# <field "indexed"="true" "stored"="true" "name"="last_modified" "type"="pdate" />
-panl.facet.l=last_modified
-panl.name.l=Last Modified
-panl.type.l=solr.DatePointField
-
-# <field "indexed"="true" "stored"="true" "name"="links" "type"="string" "multiValued"="true" />
-panl.facet.L=links
-panl.name.L=Links
-panl.type.L=solr.StrField
-
-# <field "indexed"="true" "stored"="false" "name"="text" "type"="text_general" "multiValued"="true" />
-panl.facet.T=text
-panl.name.T=Text
-panl.type.T=solr.TextField
-
-# <field "indexed"="true" "stored"="true" "name"="price" "type"="pfloat" />
-panl.facet.D=price
-panl.name.D=Price
-panl.type.D=solr.FloatPointField
-
-# <field "indexed"="true" "stored"="true" "name"="popularity" "type"="pint" />
-panl.facet.W=popularity
-panl.name.W=Popularity
-panl.type.W=solr.IntPointField
-
-# <field "indexed"="true" "stored"="true" "name"="inStock" "type"="boolean" />
-panl.facet.0=inStock
-panl.name.0=InStock
-panl.type.0=solr.BoolField
+# <field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" "multiValued"="false" />
+panl.facet.D=disassemble
+panl.name.D=Disassemble
+panl.type.D=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-panl.bool.0.true=is-inStock
-panl.bool.0.false=is-not-inStock
+panl.bool.D.true=is-disassemble
+panl.bool.D.false=is-not-disassemble
 
-# <field "indexed"="true" "stored"="true" "name"="store" "type"="location" />
-panl.facet.B=store
-panl.name.B=Store
-panl.type.B=solr.LatLonPointSpatialField
+# <field "indexed"="true" "stored"="true" "name"="mechanism_material" "type"="string" "multiValued"="false" />
+panl.facet.M=mechanism_material
+panl.name.M=Mechanism Material
+panl.type.M=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="subject" "type"="text_gen_sort" "multiValued"="false" />
-panl.facet.V=subject
-panl.name.V=Subject
-panl.type.V=solr.SortableTextField
+# <field "indexed"="true" "stored"="true" "name"="tubing_material" "type"="string" "multiValued"="false" />
+panl.facet.t=tubing_material
+panl.name.t=Tubing Material
+panl.type.t=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="category" "type"="text_general" />
-panl.facet.8=category
-panl.name.8=Category
-panl.type.8=solr.TextField
+# <field "indexed"="true" "stored"="true" "name"="hardness_indicator" "type"="string" "multiValued"="false" />
+panl.facet.h=hardness_indicator
+panl.name.h=Hardness Indicator
+panl.type.h=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="content_type" "type"="string" "multiValued"="true" />
-panl.facet.A=content_type
-panl.name.A=Content Type
+# <field "indexed"="true" "stored"="false" "name"="in_built_eraser" "type"="boolean" "multiValued"="false" />
+panl.facet.I=in_built_eraser
+panl.name.I=In Built Eraser
+panl.type.I=solr.BoolField
+# Because this is a Boolean field, you can change these values to something more human-readable
+panl.bool.I.true=is-in_built_eraser
+panl.bool.I.false=is-not-in_built_eraser
+
+# <field "indexed"="true" "stored"="true" "name"="variants" "type"="string" "multiValued"="true" />
+panl.facet.v=variants
+panl.name.v=Variants
+panl.type.v=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="nib_shape" "type"="string" "multiValued"="false" />
+panl.facet.e=nib_shape
+panl.name.e=Nib Shape
+panl.type.e=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="nib_material" "type"="string" "multiValued"="false" />
+panl.facet.x=nib_material
+panl.name.x=Nib Material
+panl.type.x=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="grip_material" "type"="string" "multiValued"="false" />
+panl.facet.X=grip_material
+panl.name.X=Grip Material
+panl.type.X=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="body_material" "type"="string" "multiValued"="false" />
+panl.facet.K=body_material
+panl.name.K=Body Material
+panl.type.K=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="clip_material" "type"="string" "multiValued"="false" />
+panl.facet.A=clip_material
+panl.name.A=Clip Material
 panl.type.A=solr.StrField
 
-# <field "indexed"="true" "stored"="false" "name"="text_rev" "type"="text_general_rev" "multiValued"="true" />
-panl.facet.9=text_rev
-panl.name.9=Text Rev
-panl.type.9=solr.TextField
+# <field "indexed"="true" "stored"="true" "name"="cap_material" "type"="string" "multiValued"="false" />
+panl.facet.f=cap_material
+panl.name.f=Cap Material
+panl.type.f=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="payloads" "type"="payloads" />
-panl.facet.3=payloads
-panl.name.3=Payloads
-panl.type.3=solr.TextField
+# <field "indexed"="true" "stored"="true" "name"="lead_grade_indicator" "type"="string" "multiValued"="false" />
+panl.facet.u=lead_grade_indicator
+panl.name.u=Lead Grade Indicator
+panl.type.u=solr.StrField
+
+# <field "indexed"="true" "stored"="true" "name"="lead_size_indicator" "type"="string" "multiValued"="false" />
+panl.facet.Z=lead_size_indicator
+panl.name.Z=Lead Size Indicator
+panl.type.Z=solr.StrField
+
+# <field "indexed"="true" "stored"="false" "name"="in_built_sharpener" "type"="boolean" "multiValued"="false" />
+panl.facet.9=in_built_sharpener
+panl.name.9=In Built Sharpener
+panl.type.9=solr.BoolField
+# Because this is a Boolean field, you can change these values to something more human-readable
+panl.bool.9.true=is-in_built_sharpener
+panl.bool.9.false=is-not-in_built_sharpener
+
+# <field "indexed"="true" "stored"="true" "name"="colours" "type"="string" "multiValued"="true" />
+panl.facet.W=colours
+panl.name.W=Colours
+panl.type.W=solr.StrField
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -334,7 +350,7 @@ panl.type.3=solr.TextField
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.order=r,i,P,S,N,m,c,f,I,w,t,d,C,a,k,R,u,l,L,T,D,W,0,B,V,8,A,9,3,p,n,s,q
+panl.lpse.order=b,N,m,B,g,G,c,C,l,d,w,R,L,D,M,t,h,I,v,e,x,X,K,A,f,u,Z,9,W,p,n,s,q
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -358,6 +374,6 @@ panl.lpse.order=r,i,P,S,N,m,c,f,I,w,t,d,C,a,k,R,u,l,L,T,D,W,0,B,V,8,A,9,3,p,n,s,
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.results.fields.all=id,pre,sku,name,manu,cat,features,includes,weight,price,popularity,inStock,store,title,subject,description,comments,author,keywords,category,resourcename,url,content_type,last_modified,links,_src_,content,payloads
+panl.results.fields.all=brand,name,mechanism_type,nib_shape,body_shape,grip_type,grip_shape,cap_shape,category,length,relative_length,diameter,weight,relative_weight,lead_length,disassemble,nib_material,mechanism_material,grip_material,body_material,tubing_material,clip_material,cap_material,hardness_indicator,lead_grade_indicator,lead_size_indicator,colours,variants
 
-panl.results.fields.firstfive=id,pre,sku,name,manu
+panl.results.fields.firstfive=brand,name,category,mechanism_type,nib_shape
