Updated files in line with book

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -172,6 +172,8 @@ solr.numrows=10
 panl.facet.b=brand
 panl.name.b=Brand
 panl.type.b=solr.StrField
+panl.prefix.b=Manufactured by 
+panl.suffix.b=\ Company
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
 panl.facet.N=name
@@ -243,8 +245,8 @@ panl.facet.D=disassemble
 panl.name.D=Disassemble
 panl.type.D=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-panl.bool.D.true=is-disassemble
-panl.bool.D.false=is-not-disassemble
+panl.bool.D.true=able to be disassembled
+panl.bool.D.false=cannot be disassembled
 
 # <field "indexed"="true" "stored"="true" "name"="mechanism_material" "type"="string" "multiValued"="false" />
 panl.facet.M=mechanism_material
