--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -3,6 +3,29 @@
 #              LAST PAGE SEGMENT ENCODING (LPSE) CONFIGURATION
 #              ---- ---- ------- -------- ------ -------------
 #
+# This is the panl configuration file which defines how panl will interact with
+# Solr.
+#
+# It uses (L)ast (P)ath (S)eparator (E)ncoding which will look something like
+# the following:
+#
+#   /something/something-else/se/
+#
+# rather than ?firstfield=something&secondfield=something-else
+#
+# The following characters may be used in the url for the encoding of the
+# facets and queries.
+#
+# A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
+# a b c d e f g h i j k l m n o p q r s t u v w x y z
+# 0 1 2 3 4 5 6 7 8 9
+#
+# The following are reserved characters and should not be used as they may be
+# HTTP encoded - note that the plus ('+') character is still used without
+# encoding.
+#
+# ! * ' ( ) ; : @ & = + $ , / ? % # [ ]
+#
 # The following configuration values determine how the LPSE is configured.  The
 # LPSE is made up of the following types:
 #     - query term parameter - the actual query entered by the user of the site
@@ -18,6 +41,7 @@
 # definitions, else a FATAL encoding error will occur and the server will not
 # be started.  This defaults to a single character if not set - i.e.
 #   panl.lpse.num=1
+#
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
