changes for property names to be clearer

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -164,9 +164,9 @@ solr.numrows=10
 
 
 # <field "indexed"="true" "stored"="true" "name"="id" "type"="string" "multiValued"="false" "required"="true" />
-#panl.facet.i=id
-#panl.name.i=Id
-#panl.type.i=solr.StrField
+panl.facet.i=id
+panl.name.i=Id
+panl.type.i=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="brand" "type"="string" "multiValued"="false" />
 panl.facet.b=brand
