--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -113,7 +113,7 @@ solr.sort.DESC=D
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 solr.facet.min.count=1
-solr.numrows=10
+solr.numrows.default=10
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
