Added in passthrough processing

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -34,6 +34,7 @@ panl.param.query=q
 panl.param.sort=s
 panl.param.page=p
 panl.param.numrows=n
+panl.param.passthrough=z
 
 #                     Whether to include single facets
 #                     ------- -- ------- ------ ------
@@ -352,7 +353,7 @@ panl.type.W=solr.StrField
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.order=b,N,m,B,g,G,c,C,l,d,w,R,L,D,M,t,h,I,v,e,x,X,K,A,f,u,Z,9,W,p,n,s,q
+panl.lpse.order=z,b,N,m,B,g,G,c,C,l,d,w,R,L,D,M,t,h,I,v,e,x,X,K,A,f,u,Z,9,W,p,n,s,q
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
