--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -58,6 +58,7 @@ $panl.param.query
 $panl.param.sort
 $panl.param.page
 $panl.param.numrows
+$panl.param.passthrough
 
 #                     Whether to include single facets
 #                     ------- -- ------- ------ ------
