Added in pagination and reset of pagination on selecting a facet

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -32,8 +32,15 @@ panl.lpse.num=1
 
 panl.param.query=q
 panl.param.sort=s
+
 panl.param.page=p
+panl.param.page.prefix=page-
+panl.param.page.suffix=-number
+
 panl.param.numrows=n
+panl.param.numrows.prefix=
+panl.param.numrows.suffix=-per-page
+
 panl.param.passthrough=z
 
 #                     Whether to include single facets
