changed available to be an array, not an object, cleaned up the schema

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -184,9 +184,9 @@ panl.prefix.b=Manufactured by
 panl.suffix.b=\ Company
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
-panl.facet.N=name
-panl.name.N=Name
-panl.type.N=solr.StrField
+#panl.facet.N=name
+#panl.name.N=Name
+#panl.type.N=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="mechanism_type" "type"="string" "multiValued"="false" />
 panl.facet.m=mechanism_type
@@ -209,9 +209,9 @@ panl.name.G=Grip Shape
 panl.type.G=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="cap_shape" "type"="string" "multiValued"="false" />
-panl.facet.c=cap_shape
-panl.name.c=Cap Shape
-panl.type.c=solr.StrField
+#panl.facet.c=cap_shape
+#panl.name.c=Cap Shape
+#panl.type.c=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="category" "type"="string" "multiValued"="false" />
 panl.facet.C=category
@@ -219,14 +219,14 @@ panl.name.C=Category
 panl.type.C=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="length" "type"="pint" "multiValued"="false" />
-panl.facet.l=length
-panl.name.l=Length
-panl.type.l=solr.IntPointField
+#panl.facet.l=length
+#panl.name.l=Length
+#panl.type.l=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="relative_length" "type"="pint" "multiValued"="false" />
-#panl.facet.r=relative_length
-#panl.name.r=Relative Length
-#panl.type.r=solr.IntPointField
+panl.facet.r=relative_length
+panl.name.r=Relative Length
+panl.type.r=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="diameter" "type"="pint" "multiValued"="false" />
 panl.facet.d=diameter
@@ -234,9 +234,9 @@ panl.name.d=Diameter
 panl.type.d=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" "multiValued"="false" />
-panl.facet.w=weight
-panl.name.w=Weight
-panl.type.w=solr.IntPointField
+#panl.facet.w=weight
+#panl.name.w=Weight
+#panl.type.w=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.facet.R=relative_weight
@@ -257,14 +257,14 @@ panl.bool.D.true=able to be disassembled
 panl.bool.D.false=cannot be disassembled
 
 # <field "indexed"="true" "stored"="true" "name"="mechanism_material" "type"="string" "multiValued"="false" />
-panl.facet.M=mechanism_material
-panl.name.M=Mechanism Material
-panl.type.M=solr.StrField
+#panl.facet.M=mechanism_material
+#panl.name.M=Mechanism Material
+#panl.type.M=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="tubing_material" "type"="string" "multiValued"="false" />
-panl.facet.t=tubing_material
-panl.name.t=Tubing Material
-panl.type.t=solr.StrField
+#panl.facet.t=tubing_material
+#panl.name.t=Tubing Material
+#panl.type.t=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="hardness_indicator" "type"="string" "multiValued"="false" />
 panl.facet.h=hardness_indicator
@@ -280,9 +280,9 @@ panl.bool.I.true=is-in_built_eraser
 panl.bool.I.false=is-not-in_built_eraser
 
 # <field "indexed"="true" "stored"="true" "name"="variants" "type"="string" "multiValued"="true" />
-panl.facet.v=variants
-panl.name.v=Variants
-panl.type.v=solr.StrField
+#panl.facet.v=variants
+#panl.name.v=Variants
+#panl.type.v=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="nib_shape" "type"="string" "multiValued"="false" />
 panl.facet.e=nib_shape
@@ -290,29 +290,29 @@ panl.name.e=Nib Shape
 panl.type.e=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="nib_material" "type"="string" "multiValued"="false" />
-panl.facet.x=nib_material
-panl.name.x=Nib Material
-panl.type.x=solr.StrField
+#panl.facet.x=nib_material
+#panl.name.x=Nib Material
+#panl.type.x=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="grip_material" "type"="string" "multiValued"="false" />
-panl.facet.X=grip_material
-panl.name.X=Grip Material
-panl.type.X=solr.StrField
+#panl.facet.X=grip_material
+#panl.name.X=Grip Material
+#panl.type.X=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="body_material" "type"="string" "multiValued"="false" />
-panl.facet.K=body_material
-panl.name.K=Body Material
-panl.type.K=solr.StrField
+#panl.facet.K=body_material
+#panl.name.K=Body Material
+#panl.type.K=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="clip_material" "type"="string" "multiValued"="false" />
-panl.facet.A=clip_material
-panl.name.A=Clip Material
-panl.type.A=solr.StrField
+#panl.facet.A=clip_material
+#panl.name.A=Clip Material
+#panl.type.A=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="cap_material" "type"="string" "multiValued"="false" />
-panl.facet.f=cap_material
-panl.name.f=Cap Material
-panl.type.f=solr.StrField
+#panl.facet.f=cap_material
+#panl.name.f=Cap Material
+#panl.type.f=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="lead_grade_indicator" "type"="string" "multiValued"="false" />
 panl.facet.u=lead_grade_indicator
@@ -360,7 +360,7 @@ panl.type.W=solr.StrField
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.order=z,b,N,m,B,g,G,c,C,l,d,w,R,L,D,M,t,h,I,v,e,x,X,K,A,f,u,Z,9,W,p,n,s,q
+panl.lpse.order=z,b,m,W,B,g,G,C,r,R,d,L,D,h,I,e,u,Z,9,p,n,s,q
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
