Added prefix and suffix to the page number

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -35,7 +35,7 @@ panl.param.sort=s
 
 panl.param.page=p
 panl.param.page.prefix=page-
-panl.param.page.suffix=-number
+panl.param.page.suffix=
 
 panl.param.numrows=n
 panl.param.numrows.prefix=
