Start of sorting of results

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -83,8 +83,8 @@ solr.modifier.OR=-
 
 solr.default.modifier=+
 
-solr.sort.ASC=U
-solr.sort.DESC=D
+solr.sort.ASC=+
+solr.sort.DESC=-
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -387,3 +387,5 @@ panl.lpse.order=z,b,m,W,B,g,G,C,r,R,d,L,D,h,I,e,u,Z,9,p,n,s,q
 panl.results.fields.all=brand,name,mechanism_type,nib_shape,body_shape,grip_type,grip_shape,cap_shape,category,length,relative_length,diameter,weight,relative_weight,lead_length,disassemble,nib_material,mechanism_material,grip_material,body_material,tubing_material,clip_material,cap_material,hardness_indicator,lead_grade_indicator,lead_size_indicator,colours,variants
 
 panl.results.fields.firstfive=brand,name,category,mechanism_type,nib_shape
+
+panl.sort.fields=brand,relative_length,relative_weight
