Fixed sort order URI path generation

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -360,7 +360,7 @@ panl.type.W=solr.StrField
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.order=z,b,m,W,B,g,G,C,r,R,d,L,D,h,I,e,u,Z,9,p,n,s,q
+panl.lpse.order=z,b,m,W,B,g,G,C,r,R,d,L,D,h,I,e,u,Z,9,s,p,n,q
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
