refactored packaging and added in the start of the panl results explainer page

--- a/panl.properties
+++ b/panl.properties
@@ -69,11 +69,14 @@ solr.indexer.server.url=http://localhost:8983/solr
 # viewer will be available.  You may wish to remove this property for production
 # (or perhaps just disallow access to it.)
 #
-# The URL is __ALWAYS__ /panl-results-viewer/
+# The URI paths are __ALWAYS__
+#    /panl-results-viewer/ - for testing the queries, facets, and results
+#    /panl-results-explainer/ - for explaining LPSE encoded URIs and describing
+#                               the configuration for the Panl server.
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.results.viewer.url=true
+panl.results.testing.urls=true
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
