--- a/src/main/resources/panl.template.properties
+++ b/src/main/resources/panl.template.properties
@@ -61,11 +61,14 @@ solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
 # viewer will be available.  You may wish to remove this property for production
 # (or perhaps just disallow access to it.)
 #
-# The URL is __ALWAYS__ /panl-results-viewer/
+# The URI paths are __ALWAYS__
+#    /panl-results-viewer/ - for testing the queries, facets, and results
+#    /panl-results-explainer/ - for explaining LPSE encoded URIs and describing
+#                               the configuration for the Panl server.
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.results.viewer.url=true
+panl.results.testing.urls=true
 
 panl.status.404.verbose=true
 panl.status.500.verbose=true
