--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -388,4 +388,4 @@ panl.results.fields.all=brand,name,mechanism_type,nib_shape,body_shape,grip_type
 
 panl.results.fields.firstfive=brand,name,category,mechanism_type,nib_shape
 
-panl.sort.fields=brand,relative_length,relative_weight
+panl.sort.fields=brand
