Panl generation input of variables update

--- a/panl.properties
+++ b/panl.properties
@@ -77,6 +77,8 @@ solr.indexer.server.url=http://localhost:8983/solr
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 panl.results.testing.urls=true
+panl.status.404.verbose=true
+panl.status.500.verbose=true
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
