--- a/src/main/resources/panl.template.properties
+++ b/src/main/resources/panl.template.properties
@@ -2,6 +2,8 @@
 #
 #                   SOLR SERVER CONNECTION CONFIGURATION
 #                   ---- ------ ---------- -------------
+# This is the panl configuration file which defines how panl will interact with
+# the Solr server.
 #
 # need the solr server location
 #   solr.search.server.url - the search server URL to connect to which must
