Added additional comments, allowable character checking

--- a/example.panl.properties
+++ b/example.panl.properties
@@ -3,6 +3,26 @@
 #              LAST PAGE SEGMENT ENCODING (LPSE) CONFIGURATION
 #              ---- ---- ------- -------- ------ -------------
 #
+# It uses (L)ast (P)ath (S)eparator (E)ncoding which will use the URI path and
+# convert it to a Solr search query.  An LPSE encoded URI path will be of the
+# following format:
+#
+#   /something/something-else/se/
+#
+# rather than ?firstfield=something&secondfield=something-else
+#
+# The following characters may be used in the url for the encoding of the
+# facets and queries.
+#
+#        A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
+#        a b c d e f g h i j k l m n o p q r s t u v w x y z
+#        0 1 2 3 4 5 6 7 8 9
+#
+# The following are reserved characters and __MUST__ not be used as they are
+# modifiers that the Panl server users
+#
+#        + - .
+#
 # The following configuration values determine how the LPSE is configured.  The
 # LPSE is made up of the following types:
 #     - query term parameter - the actual query entered by the user of the site
@@ -19,6 +39,7 @@
 # be started.  This defaults to a single character if not set - i.e.
 #   panl.lpse.num=1
 #
+#
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 panl.lpse.num=1
@@ -34,6 +55,8 @@ panl.param.query=q
 panl.param.sort=s
 panl.param.page=p
 panl.param.numrows=n
+panl.param.operand=o
+panl.param.passthrough=z
 
 #                     Whether to include single facets
 #                     ------- -- ------- ------ ------
@@ -89,7 +112,7 @@ solr.sort.DESC=D
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 solr.facet.min.count=1
-solr.numrows=10
+solr.numrows.default=10
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -264,52 +287,52 @@ panl.name.T=Text
 panl.type.T=solr.TextField
 
 # <field "indexed"="true" "stored"="true" "name"="price" "type"="pfloat" />
-panl.facet.D=price
-panl.name.D=Price
-panl.type.D=solr.FloatPointField
+panl.facet.h=price
+panl.name.h=Price
+panl.type.h=solr.FloatPointField
 
 # <field "indexed"="true" "stored"="true" "name"="popularity" "type"="pint" />
-panl.facet.W=popularity
-panl.name.W=Popularity
-panl.type.W=solr.IntPointField
+panl.facet.K=popularity
+panl.name.K=Popularity
+panl.type.K=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="inStock" "type"="boolean" />
-panl.facet.0=inStock
-panl.name.0=InStock
-panl.type.0=solr.BoolField
+panl.facet.E=inStock
+panl.name.E=InStock
+panl.type.E=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-panl.bool.0.true=is-inStock
-panl.bool.0.false=is-not-inStock
+panl.bool.E.true=is-inStock
+panl.bool.E.false=is-not-inStock
 
 # <field "indexed"="true" "stored"="true" "name"="store" "type"="location" />
-panl.facet.B=store
-panl.name.B=Store
-panl.type.B=solr.LatLonPointSpatialField
+panl.facet.0=store
+panl.name.0=Store
+panl.type.0=solr.LatLonPointSpatialField
 
 # <field "indexed"="true" "stored"="true" "name"="subject" "type"="text_gen_sort" "multiValued"="false" />
-panl.facet.V=subject
-panl.name.V=Subject
-panl.type.V=solr.SortableTextField
+panl.facet.3=subject
+panl.name.3=Subject
+panl.type.3=solr.SortableTextField
 
 # <field "indexed"="true" "stored"="true" "name"="category" "type"="text_general" />
-panl.facet.8=category
-panl.name.8=Category
-panl.type.8=solr.TextField
+panl.facet.5=category
+panl.name.5=Category
+panl.type.5=solr.TextField
 
 # <field "indexed"="true" "stored"="true" "name"="content_type" "type"="string" "multiValued"="true" />
-panl.facet.A=content_type
-panl.name.A=Content Type
-panl.type.A=solr.StrField
+panl.facet.e=content_type
+panl.name.e=Content Type
+panl.type.e=solr.StrField
 
 # <field "indexed"="true" "stored"="false" "name"="text_rev" "type"="text_general_rev" "multiValued"="true" />
-panl.facet.9=text_rev
-panl.name.9=Text Rev
-panl.type.9=solr.TextField
+panl.facet.1=text_rev
+panl.name.1=Text Rev
+panl.type.1=solr.TextField
 
 # <field "indexed"="true" "stored"="true" "name"="payloads" "type"="payloads" />
-panl.facet.3=payloads
-panl.name.3=Payloads
-panl.type.3=solr.TextField
+panl.facet.6=payloads
+panl.name.6=Payloads
+panl.type.6=solr.TextField
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -323,18 +346,57 @@ panl.type.3=solr.TextField
 # in which you would want to generate the URLs.
 #
 # NOTE: all defined panl facet fields must be represented here, and the
-# recommendation is to have the following properties:
+# recommendation is to have the properties in the following order:
+#
+#   panl.param.passthrough
+#
+#   ... all the other LPSE codes ...
 #
 #   panl.param.query
-#   panl.param.sort
 #   panl.param.page
 #   panl.param.numrows
+#   panl.param.sort
+#   panl.param.operand
 #
-# As the end of the URL
+# Of course, you are welcome to change this.
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.order=r,i,P,S,N,m,c,f,I,w,t,d,C,a,k,R,u,l,L,T,D,W,0,B,V,8,A,9,3,p,n,s,q
+panl.lpse.order=z,\
+r,\
+i,\
+P,\
+S,\
+N,\
+m,\
+c,\
+f,\
+I,\
+w,\
+t,\
+d,\
+C,\
+a,\
+k,\
+R,\
+u,\
+l,\
+L,\
+T,\
+h,\
+K,\
+E,\
+0,\
+3,\
+5,\
+e,\
+1,\
+6,\
+q,\
+p,\
+n,\
+s,\
+o
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -358,6 +420,40 @@ panl.lpse.order=r,i,P,S,N,m,c,f,I,w,t,d,C,a,k,R,u,l,L,T,D,W,0,B,V,8,A,9,3,p,n,s,
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.results.fields.all=id,pre,sku,name,manu,cat,features,includes,weight,price,popularity,inStock,store,title,subject,description,comments,author,keywords,category,resourcename,url,content_type,last_modified,links,_src_,content,payloads
+panl.results.fields.all=id,\
+pre,\
+sku,\
+name,\
+manu,\
+cat,\
+features,\
+includes,\
+weight,\
+price,\
+popularity,\
+inStock,\
+store,\
+title,\
+subject,\
+description,\
+comments,\
+author,\
+keywords,\
+category,\
+resourcename,\
+url,\
+content_type,\
+last_modified,\
+links,\
+_src_,\
+content,\
+payloads
 
-panl.results.fields.firstfive=id,pre,sku,name,manu
+panl.results.fields.firstfive=id,\
+pre,\
+sku,\
+name,\
+manu
+
+
+
