--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -14,15 +14,22 @@
 # The following characters may be used in the url for the encoding of the
 # facets and queries.
 #
-# A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
-# a b c d e f g h i j k l m n o p q r s t u v w x y z
-# 0 1 2 3 4 5 6 7 8 9
+#        A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
+#        a b c d e f g h i j k l m n o p q r s t u v w x y z
+#        0 1 2 3 4 5 6 7 8 9
 #
-# The following are reserved characters and should not be used as they may be
-# HTTP encoded - note that the plus ('+') character is still used without
-# encoding.
+# The following are reserved characters and __MUST__ not be used as they are
+# modifiers that the Panl server users
 #
-# ! * ' ( ) ; : @ & = + $ , / ? % # [ ]
+#        + - .
+#                                ~ ~ ~ * ~ ~ ~
+#
+#   NOTE: The Panl server will not enforce the above two rules.  If either the
+#         reserved characters, or a character outside of the allowable encoding
+#         characters, then the Panl server may return erroneous, or a 500
+#         internal server error.
+#
+#                                ~ ~ ~ * ~ ~ ~
 #
 # The following configuration values determine how the LPSE is configured.  The
 # LPSE is made up of the following types:
@@ -199,14 +206,19 @@ $panl.lpse.fields
 # in which you would want to generate the URLs.
 #
 # NOTE: all defined panl facet fields must be represented here, and the
-# recommendation is to have the following properties:
+# recommendation is to have the properties in the following order:
+#
+#   panl.param.passthrough
+#
+#   ... all the other LPSE codes ...
 #
 #   panl.param.query
-#   panl.param.sort
 #   panl.param.page
 #   panl.param.numrows
+#   panl.param.sort
+#   panl.param.operand
 #
-# As the end of the URL
+# Of course, you are welcome to change this.
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
@@ -229,7 +241,7 @@ $panl.lpse.order
 #
 # was also automatically generated with only the first five fields.  You may
 # rename, delete or add any of the results fields as you wish (remembering that
-# the default 'all' will __ALWAYS__ exists, even if it is not defined in this
+# the default 'all' will __ALWAYS__ exist, even if it is not defined in this
 # file).
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
