--- a/panl.properties
+++ b/panl.properties
@@ -1,37 +1,19 @@
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
-# This is the panl configuration file which defines how panl will interact with
-# Solr.
-#
-# It uses (L)ast (P)ath (S)eparator (E)ncoding which will look something like
-# the following:
-#
-#   /something/something-else/se/
-#
-# rather than ?firstfield=something&secondfield=something-else
-#
-# The following characters may be used in the url for the encoding of the
-# facets and queries.
-#
-# A B C D E F G H I J K L M N O P Q R S T U V W X Y Z
-# a b c d e f g h i j k l m n o p q r s t u v w x y z
-# 0 1 2 3 4 5 6 7 8 9
-#
-# The following are reserved characters and should not be used as they may be
-# HTTP encoded - note that the plus ('+') character is still used without
-# encoding.
-#
-# ! * ' ( ) ; : @ & = + $ , / ? % # [ ]
-#
-#
 #                   SOLR SERVER CONNECTION CONFIGURATION
 #                   ---- ------ ---------- -------------
+# This is the panl configuration file which defines how panl will interact with
+# the Solr server.
 #
 # need the solr server location
 #   solr.search.server.url - the search server URL to connect to which must
 #       NOT include the core that it is connecting to - this will be taken
-#       care of by the panl request mechanism
-#   solr.search.indexer.url - the indexer server URL(s) to connect to
+#       care of by the panl request mechanism.
+#       NOTE that if you are using connector that has multiple URLs, then
+#       they MUST be comma separated.
+#
+# We also need to know how to connect to the Solr Server
+#   solrj.client - The SolrJ Connector to use
 #
 #                                ~ ~ ~ * ~ ~ ~
 #
@@ -50,14 +32,26 @@
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
+#                            Which Solr Client To Use
+#                            ----- ---- ------ -- ---
+# Choose the correct SolrJ client for the Solr installation that you require,
+# by default, it is the CloudSolrClient.
+#
+#   solrj.client=CloudSolrClient
+
 #solrj.client=Http2SolrClient
 #solrj.client=HttpJdkSolrClient
 #solrj.client=LBHttp2SolrClient
 solrj.client=CloudSolrClient
 
-solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
-solr.indexer.server.url=http://localhost:8983/solr
+#                            Which Solr Client To Use
+#                            ----- ---- ------ -- ---
+# Choose the correct SolrJ client for the Solr installation that you require,
+# by default, it is the CloudSolrClient.
+#
+#   solrj.client=CloudSolrClient
 
+solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -77,6 +71,7 @@ solr.indexer.server.url=http://localhost:8983/solr
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 panl.results.testing.urls=true
+
 panl.status.404.verbose=true
 panl.status.500.verbose=true
 
@@ -93,6 +88,6 @@ panl.status.500.verbose=true
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.collection.mechanical-pencils=mechanical-pencils.panl.properties
+panl.collection.example=example.panl.properties
 
 
