Updated display of document results

--- a/panl.properties
+++ b/panl.properties
@@ -88,6 +88,6 @@ panl.status.500.verbose=true
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.collection.example=example.panl.properties
+panl.collection.mechanical-pencils=mechanical-pencils.panl.properties
 
 
