--- a/example.panl.properties
+++ b/example.panl.properties
@@ -22,6 +22,14 @@
 # modifiers that the Panl server users
 #
 #        + - .
+#                                ~ ~ ~ * ~ ~ ~
+#
+#   NOTE: The Panl server will not enforce the above two rules.  If either the
+#         reserved characters, or a character outside of the allowable encoding
+#         characters, then the Panl server may return erroneous, or a 500
+#         internal server error.
+#
+#                                ~ ~ ~ * ~ ~ ~
 #
 # The following configuration values determine how the LPSE is configured.  The
 # LPSE is made up of the following types:
@@ -287,52 +295,52 @@ panl.name.T=Text
 panl.type.T=solr.TextField
 
 # <field "indexed"="true" "stored"="true" "name"="price" "type"="pfloat" />
-panl.facet.h=price
-panl.name.h=Price
-panl.type.h=solr.FloatPointField
+panl.facet.A=price
+panl.name.A=Price
+panl.type.A=solr.FloatPointField
 
 # <field "indexed"="true" "stored"="true" "name"="popularity" "type"="pint" />
-panl.facet.K=popularity
-panl.name.K=Popularity
-panl.type.K=solr.IntPointField
+panl.facet.3=popularity
+panl.name.3=Popularity
+panl.type.3=solr.IntPointField
 
 # <field "indexed"="true" "stored"="true" "name"="inStock" "type"="boolean" />
-panl.facet.E=inStock
-panl.name.E=InStock
-panl.type.E=solr.BoolField
+panl.facet.4=inStock
+panl.name.4=InStock
+panl.type.4=solr.BoolField
 # Because this is a Boolean field, you can change these values to something more human-readable
-panl.bool.E.true=is-inStock
-panl.bool.E.false=is-not-inStock
+panl.bool.4.true=is-inStock
+panl.bool.4.false=is-not-inStock
 
 # <field "indexed"="true" "stored"="true" "name"="store" "type"="location" />
-panl.facet.0=store
-panl.name.0=Store
-panl.type.0=solr.LatLonPointSpatialField
+panl.facet.1=store
+panl.name.1=Store
+panl.type.1=solr.LatLonPointSpatialField
 
 # <field "indexed"="true" "stored"="true" "name"="subject" "type"="text_gen_sort" "multiValued"="false" />
-panl.facet.3=subject
-panl.name.3=Subject
-panl.type.3=solr.SortableTextField
+panl.facet.D=subject
+panl.name.D=Subject
+panl.type.D=solr.SortableTextField
 
 # <field "indexed"="true" "stored"="true" "name"="category" "type"="text_general" />
-panl.facet.5=category
-panl.name.5=Category
-panl.type.5=solr.TextField
+panl.facet.W=category
+panl.name.W=Category
+panl.type.W=solr.TextField
 
 # <field "indexed"="true" "stored"="true" "name"="content_type" "type"="string" "multiValued"="true" />
-panl.facet.e=content_type
-panl.name.e=Content Type
-panl.type.e=solr.StrField
+panl.facet.2=content_type
+panl.name.2=Content Type
+panl.type.2=solr.StrField
 
 # <field "indexed"="true" "stored"="false" "name"="text_rev" "type"="text_general_rev" "multiValued"="true" />
-panl.facet.1=text_rev
-panl.name.1=Text Rev
-panl.type.1=solr.TextField
+panl.facet.9=text_rev
+panl.name.9=Text Rev
+panl.type.9=solr.TextField
 
 # <field "indexed"="true" "stored"="true" "name"="payloads" "type"="payloads" />
-panl.facet.6=payloads
-panl.name.6=Payloads
-panl.type.6=solr.TextField
+panl.facet.E=payloads
+panl.name.E=Payloads
+panl.type.E=solr.TextField
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -383,15 +391,15 @@ u,\
 l,\
 L,\
 T,\
-h,\
-K,\
-E,\
-0,\
+A,\
 3,\
-5,\
-e,\
+4,\
 1,\
-6,\
+D,\
+W,\
+2,\
+9,\
+E,\
 q,\
 p,\
 n,\
@@ -415,7 +423,7 @@ o
 #
 # was also automatically generated with only the first five fields.  You may
 # rename, delete or add any of the results fields as you wish (remembering that
-# the default 'all' will __ALWAYS__ exists, even if it is not defined in this
+# the default 'all' will __ALWAYS__ exist, even if it is not defined in this
 # file).
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
