Added in query operand

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -41,6 +41,8 @@ panl.param.numrows=n
 panl.param.numrows.prefix=
 panl.param.numrows.suffix=-per-page
 
+panl.param.operand=o
+
 panl.param.passthrough=z
 
 #                     Whether to include single facets
@@ -77,14 +79,8 @@ panl.include.same.number.facets=false
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-# probs don't need this....
-solr.modifier.AND=+
-solr.modifier.OR=-
 
-solr.default.modifier=+
-
-solr.sort.ASC=+
-solr.sort.DESC=-
+solr.default.query.operand=+
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
@@ -184,9 +180,9 @@ panl.prefix.b=Manufactured by
 panl.suffix.b=\ Company
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
-#panl.facet.N=name
-#panl.name.N=Name
-#panl.type.N=solr.StrField
+panl.field.N=name
+panl.name.N=Name
+panl.type.N=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="mechanism_type" "type"="string" "multiValued"="false" />
 panl.facet.m=mechanism_type
@@ -388,4 +384,4 @@ panl.results.fields.all=brand,name,mechanism_type,nib_shape,body_shape,grip_type
 
 panl.results.fields.firstfive=brand,name,category,mechanism_type,nib_shape
 
-panl.sort.fields=brand
+panl.sort.fields=brand,name
