--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -98,16 +98,16 @@ panl.include.same.number.facets=false
 # These are default values which need to be present, however they may be changed
 # to something a little nicer if desired
 #
+# This __MUST__ be either a +, or a -
+#
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-# probs don't need this....
-solr.modifier.AND=+
-solr.modifier.OR=-
+solr.default.query.operand=+
 
-solr.default.modifier=+
+# need to add this - this is not a required parameter - hte default is 100 which
+# is set by solr
+solr.facet.limit=100
 
-solr.sort.ASC=U
-solr.sort.DESC=D
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
