--- a/example.panl.properties
+++ b/example.panl.properties
@@ -104,7 +104,7 @@ panl.include.same.number.facets=false
 solr.modifier.AND=+
 solr.modifier.OR=-
 
-solr.default.modifier=+
+solr.default.query.operand=+
 
 solr.sort.ASC=U
 solr.sort.DESC=D
