--- a/src/test/resources/mechanical-pencils.properties
+++ b/src/test/resources/mechanical-pencils.properties
@@ -46,7 +46,7 @@ solr.startAt=s
 solr.modifier.AND=+
 solr.modifier.OR=-
 
-solr.default.modifier=+
+solr.default.query.operand=+
 
 solr.sort.ASC=U
 solr.sort.DESC=D
