Renamed panl.param.operand to panl.param.query.operand

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -41,7 +41,7 @@ panl.param.numrows=n
 panl.param.numrows.prefix=
 panl.param.numrows.suffix=-per-page
 
-panl.param.operand=o
+panl.param.query.operand=o
 
 panl.param.passthrough=z
 
@@ -92,7 +92,7 @@ solr.default.query.operand=+
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-solr.facet.min.count=1
+solr.facet.min.count=0
 solr.numrows=10
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
