--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -63,7 +63,7 @@ $panl.param.query
 $panl.param.sort
 $panl.param.page
 $panl.param.numrows
-$panl.param.operand
+$panl.param.query.operand
 $panl.param.passthrough
 
 #                     Whether to include single facets
@@ -216,7 +216,7 @@ $panl.lpse.fields
 #   panl.param.page
 #   panl.param.numrows
 #   panl.param.sort
-#   panl.param.operand
+#   panl.param.query.operand
 #
 # Of course, you are welcome to change this.
 #
