--- a/example.panl.properties
+++ b/example.panl.properties
@@ -63,7 +63,7 @@ panl.param.query=q
 panl.param.sort=s
 panl.param.page=p
 panl.param.numrows=n
-panl.param.operand=o
+panl.param.query.operand=o
 panl.param.passthrough=z
 
 #                     Whether to include single facets
@@ -364,7 +364,7 @@ panl.type.E=solr.TextField
 #   panl.param.page
 #   panl.param.numrows
 #   panl.param.sort
-#   panl.param.operand
+#   panl.param.query.operand
 #
 # Of course, you are welcome to change this.
 #
