Added in q.op to the viewer

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -92,7 +92,7 @@ solr.default.query.operand=+
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-solr.facet.min.count=0
+solr.facet.min.count=1
 solr.numrows=10
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -356,7 +356,7 @@ panl.type.W=solr.StrField
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.lpse.order=z,b,m,W,B,g,G,C,r,R,d,L,D,h,I,e,u,Z,9,s,p,n,q
+panl.lpse.order=z,b,m,W,B,g,G,C,r,R,d,L,D,h,I,e,u,Z,9,s,p,n,o,q
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #
