Updates to the generator with more comments in the property file and fixed a null pointer bug

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -176,8 +176,9 @@ panl.type.i=solr.StrField
 panl.facet.b=brand
 panl.name.b=Brand
 panl.type.b=solr.StrField
-panl.prefix.b=Manufactured by 
+panl.prefix.b=Manufactured by
 panl.suffix.b=\ Company
+panl.or.b=true
 
 # <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
 panl.field.N=name
